--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -262,10 +262,10 @@ jobs:
               SourceOemEnvironment=production
               ;;
           esac
-          OemTarget=environment_name_hmpps_oem_${SourceOemEnvironment} >> $GITHUB_OUTPUT
-          SourceCatalogDb=$(yq .db_configs.RCVCAT.rcvcat_db_name group_vars/${OemTarget}.yml)  >> $GITHUB_OUTPUT
-          SourceDbBackupS3BucketName=$(yq .db_backup_s3_bucket_name group_vars/${OemTarget}.yml)  >> $GITHUB_OUTPUT
-          ExportName=RCVCATOWNER_${SourceCatalogDb} >> $GITHUB_OUTPUT
+          echo "OemTarget=environment_name_hmpps_oem_${SourceOemEnvironment}" >> $GITHUB_OUTPUT
+          echo "SourceCatalogDb=$(yq .db_configs.RCVCAT.rcvcat_db_name group_vars/${OemTarget}.yml)" >> $GITHUB_OUTPUT
+          echo "SourceDbBackupS3BucketName=$(yq .db_backup_s3_bucket_name group_vars/${OemTarget}.yml)" >> $GITHUB_OUTPUT
+          echo "ExportName=RCVCATOWNER_${SourceCatalogDb}" >> $GITHUB_OUTPUT
           case $(echo ${{ github.event.inputs.TargetEnvironment }} | awk -F- '{print $NF}') in
             dev)
               TargetOemEnvironment=development
