--- a/playbooks/oracle_backup/backup.yml
+++ b/playbooks/oracle_backup/backup.yml
@@ -97,7 +97,7 @@
 
         - name: Enable Repository Dispatch Event if supplied
           set_fact:
-            repository_dispatch: "-r {{ repository_dispatch }} -j \"{{ json_inputs }}\""
+            repository_dispatch_flag: "-r {{ repository_dispatch }} -j \"{{ json_inputs }}\""
           when:
              - repository_dispatch is defined
              - json_inputs is defined
@@ -145,7 +145,7 @@
 
         - name: Create RMAN Command
           set_fact:
-            rman_command: "/home/oracle/admin/rman_scripts/rman_backup.sh -d {{ database_primary_sid | default(database_standby_sid) }} -g {{ database_global_database }} {{ rman_options }} {{ ssm_parameter_path | default() }} {{ duration_options|default() }} {{ uncompress_options|default() }} {{ catalog_options|default() }} {{ enable_trace_flag|default() }} {{ repository_dispatch|default() }}"
+            rman_command: "/home/oracle/admin/rman_scripts/rman_backup.sh -d {{ database_primary_sid | default(database_standby_sid) }} -g {{ database_global_database }} {{ rman_options }} {{ ssm_parameter_path | default() }} {{ duration_options|default() }} {{ uncompress_options|default() }} {{ catalog_options|default() }} {{ enable_trace_flag|default() }} {{ repository_dispatch_flag|default() }}"
 
         - name: Show RMAN Command
           debug:
