--- a/.github/workflows/delius-core-update-task-def.yml
+++ b/.github/workflows/delius-core-update-task-def.yml
@@ -58,7 +58,7 @@ jobs:
               parsed_task_def=$(echo "$latest_task_def" | jq '{
                 family: .taskDefinition.family,
                 taskRoleArn: .taskDefinition.taskRoleArn,
-                executionRoleArn: .taskDefinition.executionRoleArn,
+                executionRoleArn: "test",
                 networkMode: .taskDefinition.networkMode,
                 containerDefinitions: .taskDefinition.containerDefinitions,
                 volumes: .taskDefinition.volumes,
